Fix path to tile cache

--- a/ansible/group_vars/tileservers.yml
+++ b/ansible/group_vars/tileservers.yml
@@ -72,7 +72,7 @@ apache:
         {% endif %}
 
         ModTileRenderdSocketName {{ (ansible_distribution_version >= '12.9') | ternary('/run/tirex/modtile.sock', '/var/lib/tirex/modtile.sock') }}
-        ModTileTileDir           /var/lib/tirex/tiles
+        ModTileTileDir {{ (ansible_distribution_version >= '12.9') | ternary('/var/cache/tirex/tiles', '/var/lib/tirex/tiles') }}
         {% for style in tileserver.styles -%}
         AddTileConfig            /{{ style }} {{ style }}
         {% endfor %}
