--- a/ansible/roles/tileserver/tasks/main.yml
+++ b/ansible/roles/tileserver/tasks/main.yml
@@ -1,7 +1,8 @@
 # SPDX-License-Identifier: MIT
+# fontconfig contains fc-list to debug font issues
 - name: Install database packages using apt
   apt:
-    name: [postgresql, postgis, 'postgresql-{{pg_version}}-postgis-{{postgis_version}}']
+    name: [postgresql, postgis, 'postgresql-{{pg_version}}-postgis-{{postgis_version}}', fontconfig]
 
 - name: Install pyscopg2 because it is a dependency for Ansible's PostgreSQL module
   apt:
