fix path to timestamp file

--- a/ansible/group_vars/website_servers.yml
+++ b/ansible/group_vars/website_servers.yml
@@ -97,8 +97,8 @@ apache:
         #ProxyPass /server-status !
 
         #ProxyPass /timestamp !
-        Alias "/timestamp" "/nvme/data/timestamp.txt"
-        Alias "/v2/timestamp" "/nvme/data/timestamp.txt"
+        Alias "/timestamp" "/var/data/timestamp.txt"
+        Alias "/v2/timestamp" "/var/data/timestamp.txt"
         Header set Access-Control-Allow-Origin "*"
         <location /timestamp>
             ForceType text/plain
