Add missing parameter to Mailman-web configuration
See https://gitlab.com/mailman/hyperkitty/-/issues/401
and https://bugs-devel.debian.org/cgi-bin/bugreport.cgi?bug=1037358

--- a/ansible/roles/mail/tasks/main.yml
+++ b/ansible/roles/mail/tasks/main.yml
@@ -392,6 +392,7 @@
                   }
               },
           ]
+          DEFAULT_AUTO_FIELD = 'django.db.models.AutoField'
       notify:
         - systemd restart mailman3-web
 
