Add redirect from old JOSM preset URL to new one
The old one was a leftover after renaming the source file some time ago.
Neither JOSM's list nor the wiki was updated back then.

--- a/ansible/group_vars/website_servers.yml
+++ b/ansible/group_vars/website_servers.yml
@@ -44,6 +44,7 @@ apache:
         # alias for imprint
         Alias /de/imprint /var/www/www.openrailwaymap.org/imprint-de.html
         Alias /en/imprint /var/www/www.openrailwaymap.org/imprint-en.html
+        Redirect permanent /josm-presets/de.zip /josm-presets/infrastructure.zip
 
         # language redirection for imprint page
         RewriteEngine On
