Run every 30d, not on first day in month
On the first day, LetsEncrypt is overloaded.

--- a/ansible/roles/letsencrypt/tasks/main.yml
+++ b/ansible/roles/letsencrypt/tasks/main.yml
@@ -135,7 +135,7 @@
       Description=Get new LetsEncrypt SSL certificate
 
       [Timer]
-      OnCalendar=monthly
+      OnUnitActiveSec=30d
       Persistent=true
       Unit=letsencrypt-update.service
 
