--- a/ansible/roles/tileserver_step2/tasks/main.yml
+++ b/ansible/roles/tileserver_step2/tasks/main.yml
@@ -380,6 +380,7 @@
   loop:
     - 'monitoring/mod-tile/check_mod_tile.py'
     - 'monitoring/tirex/check_tirex.py'
+    - 'monitoring/tirex/check_tirex_tilestats.py'
 
 - debug: # noqa unnamed-task
     msg: 'Tirex is ready to render tiles now. Please start bulk-rendering of tiles on zoom levels 0 to 12 using the following command:\ntirex-batch --prio 15 map=standard,maxspeed,signals z=0-12 bbox=-180,-80,180,80'
