--- a/ansible/group_vars/website_servers.yml
+++ b/ansible/group_vars/website_servers.yml
@@ -100,7 +100,7 @@ apache:
         #ProxyPass /timestamp !
         Alias "/timestamp" "/var/data/timestamp.txt"
         Alias "/v2/timestamp" "/var/data/timestamp.txt"
-        Header set Access-Control-Allow-Origin "*"
+        Header always set Access-Control-Allow-Origin "*"
         <location /timestamp>
             ForceType text/plain
             Require all granted
