--- a/ansible/roles/tileserver_step2/tasks/main.yml
+++ b/ansible/roles/tileserver_step2/tasks/main.yml
@@ -249,6 +249,7 @@
     - black.png
     - crowded.webp
     - vr0.png
+    - vr0-automatic-tile-loading.png
     - attribution-tile.png
 
 - name: Enable Apache module tile
