--- a/ansible/group_vars/tileservers.yml
+++ b/ansible/group_vars/tileservers.yml
@@ -183,7 +183,7 @@ apache:
         RewriteRule "." "/tile-util/crowded.webp" [PT]
 
         # Warn pages that they are running into being blocked.
-        RewriteCond "%{HTTP_REFERER}" "(megisholavonat\.info|holavonat\.is|kozlekedesiklub\.hu|vonatinfo-production\.up\.railway\.app)"
+        RewriteCond "%{HTTP_REFERER}" "(holavonat\.is|kozlekedesiklub\.hu|vonatinfo-production\.up\.railway\.app)"
         # Exclude requests not for tiles. Otherwise /index.html and its assets are forbidden as well.
         RewriteRule "[38]/[0-9]+9\.png$" "/tile-util/vr0.png" [PT]
 
