--- a/ansible/roles/tileserver_step2/tasks/main.yml
+++ b/ansible/roles/tileserver_step2/tasks/main.yml
@@ -251,6 +251,7 @@
     - vr0.png
     - vr0-automatic-tile-loading.png
     - attribution-tile.png
+    - please-contact.png
 
 - name: Enable Apache module tile
   apache2_module:
