Fix configuration error which made the message appear everywhere

--- a/ansible/group_vars/tileservers.yml
+++ b/ansible/group_vars/tileservers.yml
@@ -188,10 +188,10 @@ apache:
         RewriteRule "[38]/[0-9]+9\.png" "/tile-util/vr0.png" [PT]
         # Special message for the operator of kozlekedesiklub.hu who "struggle" :-) to set up a cache.
         RewriteCond "%{HTTP_REFERER}" "kozlekedesiklub\.hu"
-        # Exclude requests not for tiles. Otherwise /index.html and its assets are forbidden as well.
-        RewriteRule "/7/70/44\.png" "/tile-util/please-contact.png" [PT]
-        RewriteRule "/8/141/89\.png" "/tile-util/please-contact.png" [PT]
+        RewriteRule "/(8/141/89|7/70/44)\.png" "/tile-util/please-contact.png" [PT]
+        RewriteCond "%{HTTP_REFERER}" "kozlekedesiklub\.hu"
         RewriteRule "[50]/[0-9]+[27]\.png" "/tile-util/please-contact.png" [PT]
+        RewriteCond "%{HTTP_REFERER}" "kozlekedesiklub\.hu"
         RewriteRule "[38]/[0-9]+[18]\.png" "/tile-util/vr0.png" [PT]
 
         # Warn https://168railway.com/ that they are running into being blocked.
