robots.txt for www, ban a couple of AI bots

--- a/ansible/group_vars/webservers.yml
+++ b/ansible/group_vars/webservers.yml
@@ -22,3 +22,23 @@ apache:
         RewriteCond %{REQUEST_URI} !^/server-status/?$
         RewriteCond %{HTTPS} off
         RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+
+robots_txt: |-
+  User-agent: *
+  Disallow: /imprint-de.html
+  Disallow: /imprint-en.html
+  Disallow: /de/imprint
+  Disallow: /en/imprint
+
+  User-agent: OAI-SearchBot
+  User-agent: GPTBot
+  User-agent: ChatGPT-User
+  User-agent: Amazonbot
+  User-agent: MistralAI-User
+  User-agent: AhrefsBot
+  User-agent: DotBot
+  User-agent: SemrushBot
+  User-agent: LinkupBot
+  User-agent: Twitterbot
+  Disallow: /
+
