--- a/ansible/group_vars/webservers.yml
+++ b/ansible/group_vars/webservers.yml
@@ -33,6 +33,9 @@ robots_txt: |-
   User-agent: OAI-SearchBot
   User-agent: GPTBot
   User-agent: ChatGPT-User
+  User-agent: ClaudeBot
+  User-agent: YaK
+  User-agent: Flyriverbot
   User-agent: Amazonbot
   User-agent: MistralAI-User
   User-agent: AhrefsBot
