--- a/ansible/group_vars/tileservers.yml
+++ b/ansible/group_vars/tileservers.yml
@@ -233,7 +233,8 @@ apache:
         RewriteRule "\.png$" "-" [F,L]
 
         # User-agent of a desktop browser and no referer requesting tiles
-        RewriteCond "%{HTTP_USER_AGENT}" "(^Mozilla/5\.0 \(Windows NT 10\.0; Win64; x64\) | Safari/[0-9]+\.[0-9]+$| AppleWebKit/[0-9.]+ \(KHTML, like Gecko\) Mobile/[0-9E]+( OPX/[0-9.]+)?$)"
+        # The second alternative (Safari) is quite long because it should not catch Electron applications like objektverzeichnis
+        RewriteCond "%{HTTP_USER_AGENT}" "( Edg/[0-9.]+| Chrome/[0-9.]+ (Mobile(/[0-9A-F]+)? )?Safari/[0-9]+\.[0-9]+| AppleWebKit/[0-9.]+ \(KHTML, like Gecko\) Mobile/[0-9E]+( OPX/[0-9.]+)?)$"
         RewriteCond "%{HTTP_REFERER}" "^$"
         # Exclude requests not for tiles. Otherwise /index.html and its assets are forbidden as well.
         RewriteRule "\.png$" "-" [F,L]
